--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>anubis</title>
+
+    <link rel="stylesheet" href="node_modules/uikit/dist/css/uikit.min.css">
   </head>
   <body>
     <div id="app"></div>
